--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <input type="number" id="input_width_line" oninput="width_line = this.value">
             <label for="range_line">Width line</label>
         </div>
+
+        <div class="color-button">
+            <input type="button" class="btn" onclick="color_line = 'red'" style="background-color: red;">
+            <input type="button" class="btn" onclick="color_line = 'blue'" style="background-color: blue;">
+            <input type="button" class="btn" onclick="color_line = 'green'" style="background-color: green;">
+            <input type="button" class="btn" onclick="color_line = 'white'" style="background-color: white;">
+        </div>
         
 
 
