--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
         <meta charset="UTF-8">
         <title>PaintOnline</title>
         <link rel="stylesheet" href="style.css" />
-
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     </head>
     <body>
-        <canvas id=canvas width="700" height="700"></canvas>
-        <script type="text/javascript" src="main.js"></script>
+        <div class="main-screen">
 
-        <div class="width-line">
-            <input type="range" id="range_line" min="1" max="70" step="1" oninput="document.getElementById('input_width_line').value = this.value; width_line = this.value">
-            <input type="number" id="input_width_line" oninput="width_line = this.value">
-            <label for="range_line">Width line</label>
+            <canvas id="canvas" width="700" height="700"></canvas>
+            <script type="text/javascript" src="main.js"></script>
+
+            <div class="form-wdt-ln">
+                <form>
+                    <input class="input-range" type="text" data-min="1" data-max="100" placeholder="Толщина линии:" id="input_width_line" class="width-line" oninput="width_line = this.value">
+                    <input type="range" class="width-line" min="1" max="100" step="1" oninput="document.getElementById('input_width_line').value = this.value; width_line = this.value">
+                </form>
+            </div>
+            
+            <div class="form-clr-btn">
+                <form>
+                    <input type="button" class="color-button" onclick="color_line ='red'" style="background-color: red;">
+                    <input type="button" class="color-button" onclick="color_line ='orange'" style="background-color: orange;">
+                    <input type="button" class="color-button" onclick="color_line ='yellow'" style="background-color: yellow;">
+                    <input type="button" class="color-button" onclick="color_line ='green'" style="background-color: green;">
+                    <input type="button" class="color-button" onclick="color_line ='rgb(0, 183, 255)'" style="background-color: rgb(0, 183, 255);">
+                    <input type="button" class="color-button" onclick="color_line ='blue'" style="background-color: blue;">
+                    <input type="button" class="color-button" onclick="color_line ='purple'" style="background-color: purple;">
+                    <input type="button" class="color-button" onclick="color_line ='rgb(70, 0, 128)'" style="background-color: rgb(70, 0, 128);">
+                    <input type="button" class="color-button" onclick="color_line ='white'" style="background-color: white;">
+                    <input type="button" class="color-button" onclick="color_line ='black'" style="background-color: black;">
+                </form>
+            </div>
         </div>
-
-        <div class="color-button">
-            <input type="button" class="btn" onclick="color_line = 'red'" style="background-color: red;">
-            <input type="button" class="btn" onclick="color_line = 'blue'" style="background-color: blue;">
-            <input type="button" class="btn" onclick="color_line = 'green'" style="background-color: green;">
-            <input type="button" class="btn" onclick="color_line = 'white'" style="background-color: white;">
-        </div>
-        
-
-
     </body>
 </html>
